# Matcha

./: .gitignore  INTEGRATION.md  QUICK_START.md  README.md  TUI_STATUS.md  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
configs/: base.yaml  default.yaml
configs/paths/: paths.yaml
docs/: ANALOGUE_FEP_MODE.md  ANALOGUE_IMPLEMENTATION_REPORT.md
docs/superpowers/specs/: 2026-03-30-matcha-ci-cd-design.md
matcha/: cli.py  server.py  webui.py
matcha-tui/: README.md  codex-tui-style.md  package-lock.json  package.json  test-backend.mjs
matcha-tui/src/: App.tsx  index.tsx
matcha-tui/src/components/: DataRow.tsx  EmptyState.tsx  FileBrowser.tsx  Footer.tsx  Header.tsx  LoadingState.tsx  ProgressBar.tsx  Section.tsx  Spinner.tsx  TopPosesTable.tsx  index.ts
matcha-tui/src/screens/: History.tsx  Jobs.tsx  Results.tsx  Running.tsx  Setup.tsx  SetupBox.tsx  SetupFiles.tsx  SetupParams.tsx  SetupReview.tsx  Welcome.tsx  index.ts
matcha-tui/src/screens/Results/: BatchDetailView.tsx  SingleModeView.tsx
matcha-tui/src/services/: index.ts  python-bridge.ts  rpc-client.ts
matcha-tui/src/store/: index.ts
matcha-tui/src/types/: index.ts
matcha-tui/src/utils/: colors.ts  format.ts  keyboard.ts  logger.ts  molstar-viewer.ts  runtime.ts
matcha/analogue/: __init__.py  constrained_embed.py  fep_export.py  mcs.py  ranking.py  standardize.py  torsion_mc.py  workflow.py
matcha/data/coarse_grain/: cg.py  itp_parser.py  pdb.py
matcha/dataset/: complex_dataclasses.py  pdbbind.py
matcha/models/: models.py  unimol_distance_embedding.py
matcha/scoring/: __init__.py  base.py  gnina_scorer.py
matcha/tui/: __init__.py  backend.py  docking_worker.py  protocol.py  worker_process.py
matcha/tui/utils/: __init__.py  log_generator.py  pb_filters.py
matcha/utils/: __init__.py  alignment.py  bond_processing.py  datasets.py  device.py  esm_utils.py  inference.py  inference_utils.py  log.py  metrics.py  multigpu.py  paths.py  posebusters_utils.py  preprocessing.py  repro_baseline.py  spyrmsd.py  transforms.py
scripts/: check_benchmark_parity.py  compute_aligned_rmsd.py  compute_esm_embeddings.py  compute_metrics_from_sdf.py  fast_filters_from_sdf.py  final_inference_pipeline.sh  full_inference.py  generate_repro_baseline.py  nvmolkit_worker.py  prepare_esm_sequences.py  run_inference_pipeline.py  setup_nvmolkit_worker.py
scripts/benchmarks/: analogue_jacs_thrombin.py  analogue_openbind_ev2a.py
scripts/gnina/: compute_affinity.sh  compute_affinity_batch.sh  save_all_poses_indexed.py  select_top_gnina_poses.py
tests/: test_analogue_workflow.py  test_batch_clone_structure.py  test_cli_reproducibility.py  test_conformer_generation_batch.py  test_conformer_generation_in_memory.py  test_conformer_worker_contract.py  test_euler_no_history.py  test_find_rigid_alignment_stability.py  test_inference_batched_l2_norm.py  test_multigpu_cmd_build.py  test_multigpu_merge.py  test_multigpu_sharding.py  test_pdbbind_preprocessing.py  test_predicted_transforms.py  test_predicted_transforms_no_protein_deepcopy.py  test_repro_baseline.py  test_rigid_alignment_failures.py  test_run_evaluation_accumulation.py
tests/data/: README.md
tests/data/ligands/: batch_test.sdf
tests/data/repro_baselines/: local_cli_scores_filters_baseline.json
web/: .env.example  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
web/app/: layout.tsx  page.tsx
web/app/api/matcha/[...path]/: route.ts
web/app/matcha/: client.tsx  page.tsx
web/src/controllers/: ImportController.ts
web/src/matcha/: MatchaApp.tsx  client.ts
web/src/styles/: app.scss
web/src/types/: matcha.ts  variant-zod.ts  variant.ts
web/src/ui/: LPSelectionControls.tsx  PoseNavigator.tsx  ResultsWorkspace.tsx
web/src/utils/: sdf.ts  variant-metrics.ts
web/src/viewer/: MolstarViewer.tsx  viewer-spec.ts
