[project]
name = "matcha"
version = "1.0.2"
description = "Matcha: Multi-Stage Riemannian Flow Matching for Molecular Docking"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Matcha authors" }
]
dependencies = [
  "tqdm",
  "numpy",
  "scipy",
  "torch",
  "deli",
  "transformers>=4.40.0",
  "pyyaml",
  "biopython",
  "accelerate",
  "timm",
  "rdkit",
  "tensorboard",
  "omegaconf",
  "spyrmsd",
  "prody",
  "typer>=0.20.0",
  "rich",
  "huggingface-hub",
  "pandas",
  "posebusters",
]

[project.scripts]
matcha = "matcha.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["matcha*"]
