[project]
name = "matcha"
version = "2.0.0"
description = "Matcha: Multi-Stage Riemannian Flow Matching for Accurate and Physically Valid Molecular Docking"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Matcha authors" }]
dependencies = [
    "accelerate>=1.12.0",
    "argparse>=1.4.0",
    "biopython>=1.86",
    "datamol>=0.12.5",
    "deli>=0.2.4",
    "dotenv>=0.9.9",
    "huggingface-hub>=0.23",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "mdtraj>=1.11.0",
    "numpy>=2.3.5",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "periodictable>=2.0.2",
    "posebusters>=0.6.0",
    "prody>=2.6.1",
    "pyyaml>=6.0.3",
    "rdkit>=2025.9.1",
    "rich",
    "ruff>=0.14.8",
    "scikit-fmm>=2025.6.23",
    "scipy>=1.16.3",
    "spyrmsd>=0.9.0",
    "tensorboard>=2.20.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.2",
    "typer>=0.20.0",
    "vermouth>=0.15.0",
    "wandb>=0.23.0",
    "lmdb",
]

[tool.uv]
package = true

[dependency-groups]
nb = [
    "nglview>=3.1.4",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "seaborn>=0.13.2",
]
mda = ["mdanalysis>=2.10.0"]
dev = [
    "pytest>=9.0.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.8",
]

[project.scripts]
matcha = "matcha.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["matcha*"]

[tool.ruff]
line-length = 100
format.docstring-code-format = true

[tool.pytest.ini_options]
testpaths = [
    "./tests/",
    "./matcha/data/",
]
addopts = ["-ra", "-q", "-n", "auto", "--doctest-modules"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
