[project]
name = "matcha"
version = "2.0.0"
description = "Matcha: Multi-Stage Riemannian Flow Matching for Accurate and Physically Valid Molecular Docking"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Matcha authors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "biopython>=1.86",
    "datamol>=0.12.5",
    "deli>=0.2.4",
    "huggingface-hub>=0.23",
    "numpy>=2.3.5",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "posebusters>=0.6.0",
    "prody>=2.6.1",
    "rdkit>=2025.9.1",
    "rich",
    "scikit-fmm>=2025.6.23",
    "scipy>=1.16.3",
    "spyrmsd>=0.9.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.2",
    "typer>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/LigandPro/Matcha"
Repository = "https://github.com/LigandPro/Matcha"
Issues = "https://github.com/LigandPro/Matcha/issues"

[tool.uv]
package = true

[project.optional-dependencies]
lint = [
    "ruff>=0.14.8",
]
test = [
    "pytest>=9.0.1",
    "pytest-xdist>=3.8.0",
]

[dependency-groups]
nb = [
    "nglview>=3.1.4",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "seaborn>=0.13.2",
]
mda = ["mdanalysis>=2.10.0"]
dev = [
    "pytest>=9.0.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.8",
]

[project.scripts]
matcha = "matcha.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 100
target-version = "py311"
format.docstring-code-format = true

[tool.pytest.ini_options]
testpaths = [
    "./tests/",
    "./matcha/data/",
]
addopts = ["-ra", "-q", "-n", "auto", "--doctest-modules"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
